Animation | Overflow Fix

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -80,6 +80,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     position: relative;
